# ad-reco-bidding-pacing

./: README.md  pyproject.toml
docs/: project-structure.md
src/ad_reco_bidding_pacing/: __main__.py
tests/: test_smoke.py
