[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-reco-bidding-pacing"
version = "0.0.0"
description = "Ad recommendation bidding & pacing"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

[dependency-groups]
dev = ["pytest>=7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
